fixeando el scrollbar

--- a/styles/global.css
+++ b/styles/global.css
@@ -31,7 +31,7 @@
   
   *::-webkit-scrollbar-track {
     background: var(--primary);
-    border-radius: 5px;
+    border-radius: 0px;
   }
   
   *::-webkit-scrollbar-thumb {
